third_party/llvm-project/llvm/test/TableGen/unterminated-code-block.td
// RUN: not llvm-tblgen -I %p %s 2>&1 | FileCheck %s

// CHECK: error: Unterminated code block

include "unterminated-code-block-include.inc" }]>;
